--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -485,7 +485,7 @@
     <string name="button_locationstamp_description">插入位置</string>
 
     <string name="button_draw">\uF1FC</string>
-    <string name="button_draw_description">绘制</string>
+    <string name="button_draw_description">草稿</string>
 
     <string name="button_search">\uF002</string>
     <string name="button_search_description">搜索</string>
